src/pydjinni/generator/objc/it/swift/error/expected/include/objc/SFTAsyncThrowingCallback.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
#import "SFTFooError.h"
NS_SWIFT_NAME(AsyncThrowingCallback)
@protocol SFTAsyncThrowingCallback 
- (void)throwingError:(nonnull void (^)(NSError* _Nullable))completion
  __attribute__((swift_async_error(nonnull_error)))
  NS_SWIFT_NAME(throwingError(completion:));
@end
